edge-directionality: merge changes from trunk: merge  -r14311:14399
git-svn-id: http://chianti.ucsd.edu/svn@14401 0ecc0d97-ab19-0410-9704-bfe1a75892f5